--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -41,12 +41,8 @@ Le champ antisymétrique en question n'est pas forcément un champ de vecteurs l
 
 Nous regroupons dans cette section les propriétés des torseurs qui sont directement héritées et utilisées en algèbre spatiale.
 
-%Fixe la largeur de la 1ere colonne
-%\newlength{\my1rstColumnWidth}
-%\settowidth{\my1rstColumnWidth}{Multiplication par un scalaire:}
-%\setlength{\my1rstColumnWidth}{.5in}
-
 \begin{flushleft}
+\begin{spacing}{1.5}
 \begin{tabular}{ l l c p{5cm} }
   \textbf{\textsc{é}galité:}
   & $[T_{1}]=[T_{2}]$ & $\implies$ & $\mathbf{S}_{1}=\mathbf{S}_{2} \textnormal{ et } \mathbf{M}_{1}(A)=\mathbf{M}_{2}(A)$ \\
@@ -67,7 +63,13 @@ Nous regroupons dans cette section les propriétés des torseurs qui sont direct
   le torseur} \\
   & \multicolumn{3}{l}{$\mathbf{S}=\Sigma_{i}\mathbf{V}_{i} (\emph{vecteur}) \textnormal{ et } \mathbf{M}(O)=\Sigma_{i}\mathbf{OA}_{i} \times \mathbf{V}_{i} (\emph{moment}).$} \\
 \end{tabular}
+\end{spacing}
 \end{flushleft}
+
+%Fixe la largeur de la 1ere colonne
+%\newlength{\my1rstColumnWidth}
+%\settowidth{\my1rstColumnWidth}{Multiplication par un scalaire:}
+%\setlength{\my1rstColumnWidth}{.5in}
 
 Remarque: on appelle invariants d'un torseur les quantités qui restent constantes quelque soit le point fixe dans l'espace où ce torseur est définit.
 
@@ -372,5 +374,9 @@ Nous voulons l'exprimer dans la base $D_{O}$. $w_{x}$, $w_{y}$ et $w_{z}$ sont c
 Nous avons ainsi montré l'équivalence des deux vecturs spatiaux $\widehat{v}$ et $\widehat{v'}$.
 
 \subsection{invariance entre deux bases de \emph{Plücker} quelconques}
+
+
+\chapter{\textsc{é}léments d'algèbre linéaire} \label{appx_algLineaire}
+
 
 
