--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -23,4 +23,16 @@
   chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI - p. 8-15, 
   chap. 16 (Cinématique du solide et des solides en contact) - section I - p. 257, 295
   
+\bibitem{bib_eigen}
+  Eigen
+  
+\bibitem{bib_ros}
+  ROS - site internet:
+  http://wiki.ros.org/urdf/
+
+\bibitem{bib_urdf}
+  URDF - page internet sous le site ROS:
+  http://wiki.ros.org/urdf/
+
+
 \end{thebibliography}
