--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -1,7 +1,7 @@
 
 \begin{thebibliography}{9}
 
-\bibitem{bib_Featherstone}
+\bibitem{bib_featherstone}
   Roy Featherstone,
   \emph{Rigid Body Dynamics Algorithms}.
   Springer Science+Business Media, LLC,
