--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -1,9 +1,9 @@
 
 % acronymes
 
-\newacronym{acr_rneaLabel}{RNEA}{Recursive Newton-Euler Algorithm}
-\newacronym{acr_crbaLabel}{CRBA}{Composite Rigid Body Algorithm}
-\newacronym{acr_abaLabel}{ABA}{Articulated Body Algorithm}
+\newacronym{acr_rnea}{RNEA}{Recursive Newton-Euler Algorithm}
+\newacronym{acr_crba}{CRBA}{Composite Rigid Body Algorithm}
+\newacronym{acr_aba}{ABA}{Articulated Body Algorithm}
 \newacronym{acr_ros}{ROS}{Robotics Operating System \cite{bib_ros}}
 \newacronym{acr_urdf}{URDF}{Universal Robotic Description Format \cite{bib_urdf}}
 
@@ -38,4 +38,8 @@
 \newglossdef{gls_ros}{ROS}{}
 
 \newglossdef{gls_urdf}{URDF}{}
+
+\newglossdef{gls_rnea}{RNEA}{}
+
+\newglossdef{gsl_crba}{CRBA}{}
 
